Added Finite Automata lexer and tests, refactored Grammar

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,44 +1,53 @@
-SET(LIB_NAME parsing_utilites)
+file(GLOB_RECURSE GRAMMAR_LIB_HEADERS
+                "algorithms/*.hpp"
+                "grammar/*.hpp"
+                "structures/*.hpp")
 
-file(GLOB_RECURSE LIB_HEADERS "algorithms/*.hpp"
-                              "grammar/*.hpp"
-                              "structures/*.hpp")
-
-file(GLOB_RECURSE LIB_SOURCES "algorithms/*.cpp"
-                              "grammar/*.cpp"
-                              "structures/*.cpp")
-
-
-add_library(${LIB_NAME} SHARED
-                ${LIB_SOURCES}
-                ${LIB_HEADERS})
-
-set_property(TARGET ${LIB_NAME} PROPERTY CXX_STANDARD 14)
+file(GLOB_RECURSE GRAMMAR_LIB_SOURCES
+                "algorithms/*.cpp"
+                "grammar/*.cpp"
+                "structures/*.cpp")
 
 
-target_include_directories(${LIB_NAME}
-	PUBLIC
-	./
-)
+add_library(grammar SHARED
+                ${GRAMMAR_LIB_SOURCES}
+                ${GRAMMAR_LIB_HEADERS})
 
-file(GLOB_RECURSE HEADERS "lexer/*.hpp"
-                          "syntax_analyser/*.hpp"
-                          "lifecycle/*.hpp")
+set_property(TARGET grammar PROPERTY CXX_STANDARD 14)
 
-file(GLOB_RECURSE SOURCES "lexer/*.cpp"
-                          "syntax_analyser/*.cpp"
-                          "lifecycle/*.cpp")
+
+target_include_directories(grammar PUBLIC ./ )
+
+file(GLOB_RECURSE PARSING_LIB_HEADERS
+                "lexer/*.hpp"
+                "syntax_analyser/*.hpp")
+
+file(GLOB_RECURSE PARSING_LIB_SOURCES
+                "lexer/*.cpp"
+                "syntax_analyser/*.cpp")
+
+add_library(parsing SHARED
+                ${PARSING_LIB_SOURCES}
+                ${PARSING_LIB_HEADERS})
+
+set_property(TARGET parsing PROPERTY CXX_STANDARD 14)
+
+
+target_include_directories(parsing PUBLIC ./ )
+
+target_link_libraries(parsing grammar)
+
+file(GLOB_RECURSE HEADERS "lifecycle/*.hpp")
+
+file(GLOB_RECURSE SOURCES "lifecycle/*.cpp")
 
 
 add_executable(parser main.cpp ${SOURCES})
 
-target_include_directories(parser
-    PUBLIC
-    ./
-)
+target_include_directories(parser PUBLIC ./ )
 
 set_property(TARGET parser PROPERTY CXX_STANDARD 14)
 
 
-target_link_libraries(parser ${LIB_NAME})
+target_link_libraries(parser grammar parsing)
 
