Fixed minor inconsistencies

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,15 +3,26 @@ enable_testing()
 add_executable(
   LexerTest
   lexer/LexerTest.cpp
-        algorithms/ArlgorithmsTest.cpp
-        algorithms/ArlgorithmsTest.h
 )
+
+add_executable(
+  AlgorithmsTest
+  algorithms/AlgorithmsTest.cpp
+)
+
 target_link_libraries(
   LexerTest
   parsing
   GTest::gtest_main
 )
 
+target_link_libraries(
+    AlgorithmsTest
+    parsing
+    GTest::gtest_main
+)
+
 include(GoogleTest)
 
 gtest_discover_tests(LexerTest)
+gtest_discover_tests(AlgorithmsTest)
