--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,8 +11,7 @@ file(GLOB_RECURSE GRAMMAR_LIB_SOURCES
 
 add_library(grammar SHARED
                 ${GRAMMAR_LIB_SOURCES}
-                ${GRAMMAR_LIB_HEADERS}
-        algorithms/algorithms.cpp)
+                ${GRAMMAR_LIB_HEADERS})
 
 set_property(TARGET grammar PROPERTY CXX_STANDARD 14)
 
