--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,26 +1,39 @@
 enable_testing()
 
 add_executable(
-  LexerTest
-  lexer/LexerTest.cpp
+        LexerTest
+        lexer/LexerTest.cpp
 )
 
+
 add_executable(
-  AlgorithmsTest
-  algorithms/AlgorithmsTest.cpp
+        AlgorithmsTest
+        algorithms/AlgorithmsTest.cpp
+        parser/LL1Test.cpp
+)
+
+
+add_executable(
+        LL1Test
         parser/LL1Test.cpp
 )
 
 target_link_libraries(
-  LexerTest
-  parsing
-  GTest::gtest_main
+        LexerTest
+        parsing
+        GTest::gtest_main
 )
 
 target_link_libraries(
-  AlgorithmsTest
-  grammar
-  GTest::gtest_main
+        AlgorithmsTest
+        grammar
+        GTest::gtest_main
+)
+
+target_link_libraries(
+        LL1Test
+        parsing
+        GTest::gtest_main
 )
 
 include(GoogleTest)
