--- a/.github/workflows/build_and_tests.yml
+++ b/.github/workflows/build_and_tests.yml
@@ -9,7 +9,7 @@ on:
       - master
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -30,6 +30,9 @@ jobs:
           make
         working-directory: src
 
+  tests:
+    runs-on: ubuntu-latest
+    steps:
       - name: Run tests
         run: |
           cd build
