--- a/.github/workflows/build_and_tests.yml
+++ b/.github/workflows/build_and_tests.yml
@@ -38,5 +38,6 @@ jobs:
         uses: actions/checkout@v3
       - name: Run tests
         run: |
+          cd build
           ctest --test-dir tests
         working-directory: src
