--- a/.github/workflows/build_and_tests.yml
+++ b/.github/workflows/build_and_tests.yml
@@ -51,5 +51,6 @@ jobs:
 
       - name: Run tests
         run: |
-          ctest --test-dir tests
+          cd build
+          ctest
         working-directory: src
