--- a/.github/workflows/build_and_tests.yml
+++ b/.github/workflows/build_and_tests.yml
@@ -28,13 +28,12 @@ jobs:
           cd build
           cmake ..
           make
-        working-directory: src
 
       - name: Save build artifacts
         uses: actions/upload-artifact@v3
         with:
           name: build-artifacts
-          path: src/build
+          path: build
 
   tests:
     runs-on: ubuntu-latest
@@ -47,13 +46,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: build-artifacts
-          path: src/build
+          path: build
 
       - name: Run tests
         run: |
-          mkdir -p build/tests
-          cd build/tests
-          cmake ../../tests
-          make
+          cd build
           ctest
-        working-directory: src
