--- a/.github/workflows/build_and_tests.yml
+++ b/.github/workflows/build_and_tests.yml
@@ -45,5 +45,5 @@ jobs:
           path: build
 
       - name: Run tests
-        run: ./.github/workflows/tests.sh
+        run: sudo ./.github/workflows/tests.sh
 
