--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(
         AlgorithmsTest
         algorithms/AlgorithmsTest.cpp
         parser/LL1Test.cpp
+        parser/LLKTest.cpp
 )
 
 
@@ -17,6 +18,11 @@ add_executable(
         LL1Test
         parser/LL1Test.cpp
         )
+
+add_executable(
+        LLKTest
+        parser/LLKTest.cpp
+)
 
 target_link_libraries(
         LexerTest
@@ -35,6 +41,12 @@ target_link_libraries(
         parsing
         GTest::gtest_main
         )
+
+target_link_libraries(
+        LLKTest
+        parsing
+        GTest::gtest_main
+)
 
 include(GoogleTest)
 
